# the-landing

./: .gitignore  CLAUDE.md  Dockerfile  README.md  astro.config.mjs  biome.json  components.json  nginx.conf  package.json  railway.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/routes/: contact.py  health.py
backend/tests/: conftest.py  test_contact.py
frontend/: biome.json  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CommandPalette.tsx  CursorGlow.tsx  Layout.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/pages/: About.tsx  Contact.tsx  Home.tsx  Projects.tsx  Resume.tsx
src/components/: CommandPalette.tsx  CursorGlow.tsx
src/components/ui/: badge.tsx  button.tsx
src/layouts/: Layout.astro
src/pages/: about.astro  contact.astro  index.astro  projects.astro  resume.astro
src/styles/: global.css
